--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@babel/cli": "^7.28.3",
     "@babel/core": "^7.28.5",
-    "@babel/plugin-transform-arrow-functions": "^7.27.1"
+    "@babel/plugin-transform-arrow-functions": "^7.27.1",
+    "@babel/plugin-transform-classes": "^7.28.6",
+    "@babel/plugin-transform-runtime": "^7.28.5"
   }
 }
